2005-01-18  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	Merged from HEAD branch:

	* plug-ins/common/bumpmap.c: make sure bumpmap_init_params()
	is called when necessary, fixes bug #162285.
	
2005-01-18  Michael Natterer  <mitch@gimp.org>

	Merged from HEAD branch:

	* app/core/gimpparasitelist.c (parasite_serialize): use
	gimp_config_writer_data() to write the parasite data because
	it's binary and can contain '\0'.

	(gimp_parasite_list_deserialize): use gimp_scanner_parse_data() to
	read it. Still accepts the old file format for backward
	compatibility. Fixes bug #163131.

2005-01-18  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	Merged from HEAD branch:

	* libgimpwidgets/gimpwidgets.c (gimp_coordinates_callback):
	Make sure last_x and last_y are set to values that match
	those returned by gimp_size_entry_get_refval(), 
	fixes bug #163951.
	
2005-01-18  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	Merged from HEAD branch:

	* app/dialogs/info-dialog.c: disconnect callbacks to prevent crash
	when destroying dialog, fixes bug #163617.
	
2005-01-17  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	Merged from HEAD branch:

	* plug-ins/xjt/xjt.c: use gimp_temp_name instead of trying to
	create temp dir at loc of file, fixes bug #164116.
	
2005-01-16  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/tools/gimppaintoptions-gui.c (pressure_options_gui): added a
	toggle to control whether pressure affects opacity of the Airbrush
	tool (bug #164237).

2005-01-16  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/common/curve_bend.c: applied patch from Jan Heller that
	fixes broken expose event handling (bug #164207).

2005-01-14  Michael Natterer  <mitch@gimp.org>

	Merged from HEAD branch:

	* app/core/core-enums.[ch] (enum GimpUndoType): added GIMP_UNDO_INK.

	* app/paint/gimppaintcore.[ch]: added virtual function
	GimpPaintCore::push_undo() and call it.

	* app/paint/gimppaintcore-undo.[ch]: made it the default
	implementation.
