@@ -1,3 +1,14 @@
+2005-01-18  Michael Natterer  <mitch@gimp.org>
+
+	Merged from HEAD branch:
+
+	* app/widgets/gimpdockable.[ch]: added new function
+	gimp_dockable_blink() which lets the dockable's title_area blink.
+
+	* app/widgets/gimpdialogfactory.c
+	(gimp_dialog_factory_dialog_new_internal): let wilber blink at the
+	user :) Fixes bug #164156.
+
 2005-01-18  Bill Skaggs <weskaggs@primate.ucdavis.edu>
 
 	Merged from HEAD branch:
